--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,13 @@
     <title>ROCK PAPER SCISSORS EXTREME</title>
 </head>
 <body class="bg-black">
-    <div>
-    <button class="text-yellow-400">Pedra</button>
-    <button class="text-yellow-400">Papel</button>
-    <button class="text-yellow-400">Tesoura</button>
+    <div class="place-content-center flex gap-20 mt-52">
+    <button class="border-2 p-5 rounded-full border-white text-white"><img src="Img/paper.webp" alt="Scissor"></button>
+    <button class="border-2 p-5 rounded-full border-white text-white"><img src="Img/rock.png" alt="Rock"></button>
+    <button class="border-2 p-5 rounded-full border-white text-white"><img src="Img/paper.webp" alt="Paper"></button>
     </div>
-    <div>
-        <p>P de teste abracadabra, sim la bim</p>
+    <div class="place-content-center flex mt-10">
+        <p class=" text-white">P de teste abracadabra, sim la bim</p>
     </div>
     <script src="/src/script.js"></script>
 </body>
