--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,15 @@
     <link rel="stylesheet" href="/src/output.css">
     <title>ROCK PAPER SCISSORS EXTREME</title>
 </head>
-<body class="bg-black">
+<body class="bg-gradient-to-r from-sky-500 to-indigo-500">
     <div class="place-content-center flex gap-20 mt-52">
-    <button class="border-2 p-5 rounded-full border-white text-white"><img src="Img/paper.webp" alt="Scissor"></button>
-    <button class="border-2 p-5 rounded-full border-white text-white"><img src="Img/rock.png" alt="Rock"></button>
-    <button class="border-2 p-5 rounded-full border-white text-white"><img src="Img/paper.webp" alt="Paper"></button>
+    <button class="border-2 p-5 rounded-full border-white hover:text-opacity-100 hover:bg-red-600 hover:bg-opacity-50 text-white text-opacity-0">Paper</button>
+    <button class="border-2 p-5 rounded-full border-white hover:text-opacity-100 hover:bg-green-500 hover:bg-opacity-50 text-white text-opacity-0">Rock</button>
+    <button class="border-2 p-5 rounded-full border-white hover:text-opacity-100  hover:bg-yellow-500 hover:bg-opacity-50 text-white text-opacity-0">Scissor</button>
     </div>
-    <div class="place-content-center flex mt-10">
-        <p class=" text-white">P de teste abracadabra, sim la bim</p>
+    <div class="place-content-center place-items-center flex flex-col mt-10">
+        <p class=" text-white">Pontuação dos humanos: <span></span></p>
+        <p class=" text-white">Pontuação das maquinas: <span></span></p>
     </div>
     <script src="/src/script.js"></script>
 </body>
