Adicionei a logica de jogo

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
     <button class="border-2 p-5 rounded-full border-white hover:text-opacity-100  hover:bg-yellow-500 hover:bg-opacity-50 text-white text-opacity-0">Scissor</button>
     </div>
     <div class="place-content-center place-items-center flex flex-col mt-10">
-        <p class=" text-white">Pontuação dos humanos: <span></span></p>
-        <p class=" text-white">Pontuação das maquinas: <span></span></p>
+        <p class=" text-white">Pontuação dos humanos: <span id="human"> </span></p>
+        <p class=" text-white">Pontuação das maquinas: <span id="robot"> </span></p>
     </div>
     <script src="/src/script.js"></script>
 </body>
